// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize link 1`] = `
{
  "children": [
    {
      "text": "Personal website",
    },
  ],
  "type": "a",
  "url": "https://jackhanford.com",
}
`;

exports[`deserialize link with linkDestinationKey 1`] = `
{
  "children": [
    {
      "text": "Shopping",
    },
  ],
  "custom-value": "https://eaze.com",
  "type": "a",
}
`;
